# reportit

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
reportit/: __init__.py  bridges.py  config.py  hooks.py  reporter.py  utils.py
tests/: __init__.py  test_bridges.py  test_config.py  test_hooks.py  test_integration.py  test_reporter.py  test_utils.py
